Bug 1580196 - Test that expired histograms don't stream to GV r=janerik

Differential Revision: https://phabricator.services.mozilla.com/D46358